# ffdata

./: .gitignore  README.md  ff_cache.sqlite  pyproject.toml
data/FamaFrench/: 49_Industry_Portfolios.parquet  F-F_Research_Data_5_Factors_2x3.parquet  F-F_Research_Data_5_Factors_2x3_daily.parquet
src/app/: About.py  data.py  ff_cache.sqlite
src/app/.streamlit/: config.toml
src/app/pages/: 1_Returns.py  2_Returns_duckdb.py
src/data/FamaFrench/: 49_Industry_Portfolios.parquet  F-F_Research_Data_5_Factors_2x3.parquet  F-F_Research_Data_5_Factors_2x3_daily.parquet
src/db/: data.py
src/expected_returns_django_api/: manage.py
src/expected_returns_django_api/expected_returns_django_api/: asgi.py  settings.py  urls.py  wsgi.py
src/expected_returns_django_api/realised_returns/: apps.py  urls.py  views.py
