[tool.poetry]
name = "expected-returns-api"
version = "0.1.0"
description = "Django Ninja Based API for Expected Returns Data"
authors = ["Mark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
django = "^5.0.4"
django-ninja = "^1.1.0"
pyarrow = "^16.0.0"
requests-cache = "^1.2.0"
pandas-datareader = "^0.10.0"
requests = "^2.31.0"
streamlit = "^1.33.0"
plotly = "^5.21.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
