[tool.poetry]
name = "ffdata"
version = "0.1.0"
description = "A streamlit app to analyse Fama and French data"
authors = ["Mark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
requests-cache = "^1.2.0"
requests = "^2.31.0"
streamlit = "^1.33.0"
plotly = "^5.21.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
