[tool.poetry]
name = "ffdata"
version = "0.1.0"
description = "A streamlit app to analyse Fama and French data"
authors = ["Mark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
requests-cache = "^1.2.0"
requests = "^2.31.0"
streamlit = "^1.33.0"
plotly = "^5.21.0"
duckdb = "^0.10.2"
harlequin = "^1.18.0"
beautifulsoup4 = "^4.12.3"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
